better bradning on collapsed navbar, fix title

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -180,3 +180,12 @@ textarea {
   opacity: 1;
   transform: translateY(0);
 }
+
+/* Utility to hide scrollbars */
+.no-scrollbar::-webkit-scrollbar {
+  display: none !important;
+}
+.no-scrollbar {
+  -ms-overflow-style: none !important;  /* IE and Edge */
+  scrollbar-width: none !important;  /* Firefox */
+}
